<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout      xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.ShoppingListFragment"
    android:background="#e8fdff">
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="2dp"
        android:textSize="2dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:hint="Add an Item"
        android:padding="15dp" />

    <LinearLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/addItem"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight=".10"
            android:background="@color/Buttons"
            android:text="Add"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF" />

        <Button
            android:id="@+id/deleteItem"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_toRightOf="@id/addItem"
            android:layout_weight=".10"
            android:background="@color/Buttons"
            android:text="Delete"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF" />

        <Button
            android:id="@+id/clearList"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_toRightOf="@id/deleteItem"
            android:layout_weight=".10"
            android:background="@color/Buttons"
            android:text="Clear"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF" />

    </LinearLayout>




    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relativeLayout1"
        android:layout_marginTop="1dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="My Shopping List"
        android:textSize="20dp" />

    <ListView
        android:id="@+id/shoppingListView"
        android:layout_width="match_parent"
        android:layout_height="510dp"
        android:layout_below="@id/title"
        android:textAlignment="center"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="-3dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:choiceMode="multipleChoice"
        android:gravity="center_horizontal">


    </ListView>

    <TextView
        android:id="@+id/oldListText"
        android:layout_width="match_parent"
        android:layout_height="504dp"
        android:layout_below="@id/title"
        android:layout_marginTop="3dp"
        android:text="" />
</RelativeLayout>
